devserver_ops.err
SyntaxError: Expected property name or '}' in JSON at position 1 (line 1 column 2)
    at JSON.parse (<anonymous>)
    at parse (C:\Users\deanm\OneDrive\Documents\Veriscope AI\veriscope\node_modules\body-parser\lib\types\json.js:92:19)
    at C:\Users\deanm\OneDrive\Documents\Veriscope AI\veriscope\node_modules\body-parser\lib\read.js:128:18
    at AsyncResource.runInAsyncScope (node:async_hooks:214:14)
    at invokeCallback (C:\Users\deanm\OneDrive\Documents\Veriscope AI\veriscope\node_modules\raw-body\index.js:238:16)
    at done (C:\Users\deanm\OneDrive\Documents\Veriscope AI\veriscope\node_modules\raw-body\index.js:227:7)
    at IncomingMessage.onEnd (C:\Users\deanm\OneDrive\Documents\Veriscope AI\veriscope\node_modules\raw-body\index.js:287:7)
    at IncomingMessage.emit (node:events:508:28)
    at endReadableNT (node:internal/streams/readable:1701:12)
    at process.processTicksAndRejections (node:internal/process/task_queues:89:21)
SyntaxError: Expected property name or '}' in JSON at position 1 (line 1 column 2)
    at JSON.parse (<anonymous>)
    at parse (C:\Users\deanm\OneDrive\Documents\Veriscope AI\veriscope\node_modules\body-parser\lib\types\json.js:92:19)
    at C:\Users\deanm\OneDrive\Documents\Veriscope AI\veriscope\node_modules\body-parser\lib\read.js:128:18
    at AsyncResource.runInAsyncScope (node:async_hooks:214:14)
    at invokeCallback (C:\Users\deanm\OneDrive\Documents\Veriscope AI\veriscope\node_modules\raw-body\index.js:238:16)
    at done (C:\Users\deanm\OneDrive\Documents\Veriscope AI\veriscope\node_modules\raw-body\index.js:227:7)
    at IncomingMessage.onEnd (C:\Users\deanm\OneDrive\Documents\Veriscope AI\veriscope\node_modules\raw-body\index.js:287:7)
    at IncomingMessage.emit (node:events:508:28)
    at endReadableNT (node:internal/streams/readable:1701:12)
    at process.processTicksAndRejections (node:internal/process/task_queues:89:21)
{"timestamp":"2026-02-21T08:40:50.522Z","level":"warn","requestId":"536c9734-25ae-4312-8eac-da858c7e5cf2","route":"/v1/incident-escalation-policies","method":"PATCH","statusCode":400,"latencyMs":439,"message":"PATCH /v1/incident-escalation-policies 400 439ms"}
Browserslist: browsers data (caniuse-lite) is 16 months old. Please run:
  npx update-browserslist-db@latest
  Why you should do it regularly: https://github.com/browserslist/update-db#readme
{"timestamp":"2026-02-21T10:16:19.400Z","level":"warn","requestId":"09e96414-9d32-4718-8b12-81b97b687075","route":"/admin/ops/reset","method":"POST","statusCode":404,"latencyMs":8,"message":"POST /admin/ops/reset 404 8ms"}
{"timestamp":"2026-02-21T10:17:09.325Z","level":"warn","requestId":"ee7236fd-9157-47cd-a8f9-11eb2c0aed06","route":"/admin/ops/reset","method":"POST","statusCode":404,"latencyMs":2,"message":"POST /admin/ops/reset 404 2ms"}
{"timestamp":"2026-02-21T10:18:38.923Z","level":"warn","requestId":"dbd5ab85-4aa2-41da-9972-08cb91856418","route":"/admin/ops/reset","method":"POST","statusCode":404,"latencyMs":1,"message":"POST /admin/ops/reset 404 1ms"}
Initialization error: ErrorEvent {
  Symbol(kTarget): WebSocket {
    _events: [Object: null prototype] {
      error: [Function],
      message: [Function],
      close: [Function],
      open: [Function]
    },
    _eventsCount: 4,
    _maxListeners: undefined,
    _binaryType: 'arraybuffer',
    _closeCode: 1006,
    _closeFrameReceived: false,
    _closeFrameSent: false,
    _closeMessage: <Buffer >,
    _closeTimer: null,
    _errorEmitted: true,
    _extensions: {},
    _paused: false,
    _protocol: '',
    _readyState: 3,
    _receiver: null,
    _sender: null,
    _socket: null,
    _bufferedAmount: 0,
    _isServer: false,
    _redirects: 0,
    _autoPong: true,
    _url: 'wss://ep-old-truth-agorlwtl.c-2.eu-central-1.aws.neon.tech/v2',
    _req: null,
    Symbol(shapeMode): false,
    Symbol(kCapture): false
  },
  Symbol(kType): 'error',
  Symbol(kError): Error: getaddrinfo ENOTFOUND ep-old-truth-agorlwtl.c-2.eu-central-1.aws.neon.tech
      at GetAddrInfoReqWrap.onlookupall [as oncomplete] (node:dns:122:26) {
    errno: -3008,
    code: 'ENOTFOUND',
    syscall: 'getaddrinfo',
    hostname: 'ep-old-truth-agorlwtl.c-2.eu-central-1.aws.neon.tech'
  },
  Symbol(kMessage): 'getaddrinfo ENOTFOUND ep-old-truth-agorlwtl.c-2.eu-central-1.aws.neon.tech'
}
Initialization error: ErrorEvent {
  Symbol(kTarget): WebSocket {
    _events: [Object: null prototype] {
      error: [Function],
      message: [Function],
      close: [Function],
      open: [Function]
    },
    _eventsCount: 4,
    _maxListeners: undefined,
    _binaryType: 'arraybuffer',
    _closeCode: 1006,
    _closeFrameReceived: false,
    _closeFrameSent: false,
    _closeMessage: <Buffer >,
    _closeTimer: null,
    _errorEmitted: true,
    _extensions: {},
    _paused: false,
    _protocol: '',
    _readyState: 3,
    _receiver: null,
    _sender: null,
    _socket: null,
    _bufferedAmount: 0,
    _isServer: false,
    _redirects: 0,
    _autoPong: true,
    _url: 'wss://ep-old-truth-agorlwtl.c-2.eu-central-1.aws.neon.tech/v2',
    _req: null,
    Symbol(shapeMode): false,
    Symbol(kCapture): false
  },
  Symbol(kType): 'error',
  Symbol(kError): Error: getaddrinfo ENOTFOUND ep-old-truth-agorlwtl.c-2.eu-central-1.aws.neon.tech
      at GetAddrInfoReqWrap.onlookupall [as oncomplete] (node:dns:122:26) {
    errno: -3008,
    code: 'ENOTFOUND',
    syscall: 'getaddrinfo',
    hostname: 'ep-old-truth-agorlwtl.c-2.eu-central-1.aws.neon.tech'
  },
  Symbol(kMessage): 'getaddrinfo ENOTFOUND ep-old-truth-agorlwtl.c-2.eu-central-1.aws.neon.tech'
}
{"timestamp":"2026-02-21T10:26:36.226Z","level":"error","requestId":"1d882ee2-238e-40ed-b152-f3dddd31a53b","route":"/api/init","method":"POST","statusCode":500,"latencyMs":11135,"message":"POST /api/init 500 11135ms"}
{"timestamp":"2026-02-21T10:26:36.228Z","level":"error","requestId":"af7277cc-c6bf-4636-8e01-caf9f172c81c","route":"/api/init","method":"POST","statusCode":500,"latencyMs":522,"message":"POST /api/init 500 522ms"}

file:///C:/Users/deanm/OneDrive/Documents/Veriscope%20AI/veriscope/node_modules/@neondatabase/serverless/index.mjs:1345
o?t(o):n(u)},"cb"),s=new r(function(o,u){n=o,t=u}).catch(o=>{throw Error.captureStackTrace(
                                                                         ^
ErrorEvent {
  Symbol(kTarget): WebSocket {
    _events: [Object: null prototype] {
      error: [Function: onError] {
        Symbol(kIsForOnEventAttribute): false,
        Symbol(kListener): [Function (anonymous)]
      },
      message: [Function: onMessage] {
        Symbol(kIsForOnEventAttribute): false,
        Symbol(kListener): [Function (anonymous)]
      },
      close: [Function: onClose] {
        Symbol(kIsForOnEventAttribute): false,
        Symbol(kListener): [Function (anonymous)]
      },
      open: [Function: onOpen] {
        Symbol(kIsForOnEventAttribute): false,
        Symbol(kListener): [Function: handleWebSocketOpen]
      }
    },
    _eventsCount: 4,
    _maxListeners: undefined,
    _binaryType: 'arraybuffer',
    _closeCode: 1006,
    _closeFrameReceived: false,
    _closeFrameSent: false,
    _closeMessage: Buffer(0) [Uint8Array] [],
    _closeTimer: null,
    _errorEmitted: true,
    _extensions: {},
    _paused: false,
    _protocol: '',
    _readyState: 3,
    _receiver: null,
    _sender: null,
    _socket: null,
    _bufferedAmount: 0,
    _isServer: false,
    _redirects: 0,
    _autoPong: true,
    _url: 'wss://ep-old-truth-agorlwtl.c-2.eu-central-1.aws.neon.tech/v2',
    _req: null,
    Symbol(shapeMode): false,
    Symbol(kCapture): false
  },
  Symbol(kType): 'error',
  Symbol(kError): Error: getaddrinfo ENOTFOUND ep-old-truth-agorlwtl.c-2.eu-central-1.aws.neon.tech
      at GetAddrInfoReqWrap.onlookupall [as oncomplete] (node:dns:122:26) {
    errno: -3008,
    code: 'ENOTFOUND',
    syscall: 'getaddrinfo',
    hostname: 'ep-old-truth-agorlwtl.c-2.eu-central-1.aws.neon.tech'
  },
  Symbol(kMessage): 'getaddrinfo ENOTFOUND ep-old-truth-agorlwtl.c-2.eu-central-1.aws.neon.tech'
}

Node.js v24.13.0
